external-crates/move/move-prover/tests/sources/functional/invariants.exp
Move prover returns: exiting with verification errors
error: data invariant does not hold
   ┌─ tests/sources/functional/invariants.move:16:9
   │
16 │         invariant greater_one(x);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/invariants.move:43: invalid_R_pack
   =     at tests/sources/functional/invariants.move:16

error: data invariant does not hold
   ┌─ tests/sources/functional/invariants.move:16:9
   │
16 │         invariant greater_one(x);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/invariants.move:113: lifetime_invalid_R
   =     at tests/sources/functional/invariants.move:16
   =     at tests/sources/functional/invariants.move:113: lifetime_invalid_R
   =         r#1#0 = <redacted>
   =     at tests/sources/functional/invariants.move:114: lifetime_invalid_R
   =     at tests/sources/functional/invariants.move:115: lifetime_invalid_R
   =         x_ref#1#0 = <redacted>
   =     at tests/sources/functional/invariants.move:116: lifetime_invalid_R
   =     at tests/sources/functional/invariants.move:16

error: data invariant does not hold
    ┌─ tests/sources/functional/invariants.move:150:9
    │
150 │         invariant y > 1;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:153: lifetime_invalid_S_branching
    =         cond = <redacted>
    =     at tests/sources/functional/invariants.move:154: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:143
    =     at tests/sources/functional/invariants.move:154: lifetime_invalid_S_branching
    =         a#1#0 = <redacted>
    =     at tests/sources/functional/invariants.move:155: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:150
    =     at tests/sources/functional/invariants.move:155: lifetime_invalid_S_branching
    =         b#1#0 = <redacted>
    =     at tests/sources/functional/invariants.move:156: lifetime_invalid_S_branching
    =         a_ref#1#0 = <redacted>
    =     at tests/sources/functional/invariants.move:157: lifetime_invalid_S_branching
    =         b_ref#1#0 = <redacted>
    =     at tests/sources/functional/invariants.move:158: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:143
    =     at tests/sources/functional/invariants.move:158: lifetime_invalid_S_branching
    =         a#1#0 = <redacted>
    =     at tests/sources/functional/invariants.move:158: lifetime_invalid_S_branching
    =         x_ref#1#0 = <redacted>
    =     at tests/sources/functional/invariants.move:160: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:163: lifetime_invalid_S_branching
    =     at <internal>:1
    =     at tests/sources/functional/invariants.move:163: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:150
